testsuite/poke.pkl/attr-esize-diag-1.pk
/* { dg-do compile } */

type t=struct{int8[
   8'esize (2) /* { dg-error "not defined" } */
];};
